--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
-.category {
-    text-align: center;
+.ui.menu .item img.logo {
+    margin-right: 1.5em;
+}
+
+.main.container {
+    margin-top: 7em;
+}
+
+.ui.footer.segment {
+	margin: 5em 0em 0em;
+    padding: 5em 0em;
 }
