--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,18 @@
 	margin: 5em 0em 0em;
     padding: 5em 0em;
 }
+
+.google-map {
+	position: relative;
+	padding-bottom: 100%; 
+	height: 0;
+	overflow: hidden;
+}
+
+.google-map iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100% !important;
+	height: 100% !important;
+}
