Logo now links to homepage

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,6 +1,6 @@
 <div class="nav">
 <div class="navlinks">
-  <img class="header-img" src="images/logo.png" />
+  <a href="index.html"><img class="header-img" src="images/logo.png" /></a>
   <a href="index.html" class="active item">Home</a>
   <a href="about.html" class="item">About</a>
   <a href="visit.html" class="item">Visit&nbsp;Us</a>
