--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,10 +1,8 @@
-<div class="nav">
 <div class="navlinks">
-  <a href="index.html"><img class="header-img" src="images/logo.png" /></a>
+  <a href="/"><img class="header-img" src="images/logo.png" /></a>
   <a href="index.html" class="active item">Home</a>
   <a href="about.html" class="item">About</a>
   <a href="visit.html" class="item">Visit&nbsp;Us</a>
   <a href="index.html#products" class="item">Products</a>
   <a href="faq.html" class="item">FAQ</a>
-</div>
 </div>
