Fixed active links on navbar

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -6,8 +6,8 @@
       <p>858.459.5166</p>
       <p>
         <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x"></i></a>
-        <a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
-        <a href=""><i class="fa fa-send fa-2x"></i></a>
+        <a href="https://www.facebook.com/Jewels-by-The-Sea-122293291160690"><i class="fa fa-facebook-square fa-2x"></i></a>
+        <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-send fa-2x"></i></a>
       </p>
       <div id ="mymodalg"><a href="#">Newsletter Sign Up <big>&rarr;</big></i></a></div>
       
