--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,8 +1,10 @@
 <div class="navlinks">
   <a href="/"><img class="header-img" src="images/logo.png" /></a>
-  <a href="index.html" class="active item navlink">Home</a>
-  <a href="about.html" class="item navlink">About</a>
-  <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
-  <a href="index.html#products" class="item navlink">Products</a>
-  <a href="faq.html" class="item navlink">FAQ</a>
+  <div class="nav-container">
+    <a href="index.html" class="item navlink">Home</a>
+    <a href="about.html" ng-class="getClass('about.html')" class="item navlink">About</a>
+    <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
+    <a href="index.html#products" class="item navlink">Products</a>
+    <a href="faq.html" class="item navlink">FAQ</a>
+  </div>
 </div>
