--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,11 @@ body {
 	z-index:999;
 }
 
+.nav-container {
+	float:left;
+	width:88%;
+}
+
 .navlinks {
 	text-transform: uppercase;
 	text-align:center;
@@ -63,19 +68,19 @@ body {
 	font-size:2em;
 }
 
-.navlink>a {
+a.navlink {
 	padding:0 5%;
 	color:#d4d5f6;
 }
 
-.navlink>a:hover {
+a.navlink:hover {
 	color:#fff;
 }
 
 .header-img{
-	width:150px;
+	width:10%;
 	float:left;
-	margin-left:5%;
+	margin-left:2%;
 }
 
 .border-right {
