--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,49 @@ body {
 	color:green;
 }
 
-.nav {
-	position:fixed;
+.header-img{
+	width:10%;
+	float:left;
+	margin-left:2%;
+}
+
+.border-right {
+	border-right:1px solid rgba(34, 36, 38, 0.1);
+}
+
+.bold-text {
+	font-weight: bold;
+}
+
+/* fjdkls;aghj */
+header {
+    width: 100%;
+    height: 75px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #08062b;
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    -ms-transition: height 0.3s;
+    -o-transition: height 0.3s;
+    transition: height 0.3s;
+}
+
+#logo {
+	float:left;
+	width:10%;
+	margin-left:2%;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#logo img {
 	width:100%;
-	background-color:#08062b;
-	height:75px;
-	top:0;
-	left:0;
-	z-index:999;
 }
 
 .nav-container {
@@ -77,16 +112,57 @@ a.navlink:hover {
 	color:#fff;
 }
 
-.header-img{
-	width:10%;
-	float:left;
-	margin-left:2%;
+header.smaller {
+    height: 25px;
+   	font-size:0.5em;
+}
+header.smaller #logo {
+    width: 50px;
+    height: 50px;
+    line-height: 25px;
 }
 
-.border-right {
-	border-right:1px solid rgba(34, 36, 38, 0.1);
+header.smaller .nav-container {
+	height:25px;
+	line-height:25px;
 }
 
-.bold-text {
-	font-weight: bold;
+header.smaller .nav-container a {
+    line-height: 25px;
+}
+
+@media all and (max-width: 660px) {
+    header #logo {
+        display: block;
+        float: none;
+        margin: 0 auto;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+    }
+    header nav {
+        display: block;
+        float: none;
+        height: 50px;
+        text-align: center;
+        margin: 0 auto;
+    }
+    header nav a {
+        line-height: 50px;
+        margin: 0 10px;
+    }
+    header.smaller {
+        height: 75px;
+    }
+    header.smaller #logo {
+        height: 40px;
+        line-height: 40px;
+        font-size: 30px;
+    }
+    header.smaller nav {
+        height: 35px;
+    }
+    header.smaller nav a {
+        line-height: 35px;
+    }
 }
