Fleshed out categories page

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,8 +2,8 @@
   <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
 
-      <p>1237 Prospect Street, Suite B, La Jolla, CA 92037</p>
-      <p>858.459.5166</p>
+      <p>1237 Prospect Street, Suite B<br> La Jolla, CA 92037</p>
+      <p><a href="tel:8584595166">858.459.5166</a></p>
       <p>
         <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x"></i></a>
         <a href="https://www.facebook.com/Jewels-by-The-Sea-122293291160690"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -45,7 +45,9 @@
         <p data-id="First Name:p" >
           <input data-id="First Name:input" type="text" name="first_name" value="" placeholder="Name" maxlength="50"></p>
 
-        <button class="ui button" type="submit" data-enabled="enabled">Sign Up</button>
+        <div class="div-center">
+        <button class="ui blue button" type="submit" data-enabled="enabled">Sign Up</button>
+        </div>
 
         <div class="ui segment center aligned"><small>By submitting this form, you are granting: Jewels by the Sea (1237 Prospect Street, La Jolla, California, 92037, United States, <i>http://www.jewelsbythesea.biz</i>) permission to email you. You may unsubscribe via the link found at the bottom of every email.  (See our <a href="http://www.constantcontact.com/legal/privacy-statement" target="_blank">Email Privacy Policy</a> for details.) Emails are serviced by Constant Contact.</small></div>
        </form>
