--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .main.container {
-    margin-top: 7em;
+    margin-top: 5em;
 }
 
 .ui.footer.segment {
@@ -25,6 +25,10 @@ body {
 }
 
 .footer {
+}
+
+.ui.card.content {
+    background-color:yellow;
 }
 
 .google-map {
@@ -43,7 +47,10 @@ body {
 }
 
 .active.item {
-	color:green;
+}
+
+.ui.list.active.item {
+    font-weight:bold;
 }
 
 .header-img{
@@ -58,6 +65,38 @@ body {
 
 .bold-text {
 	font-weight: bold;
+}
+
+.div-center {
+    text-align:center;
+}
+
+.category-list{
+    padding-left:15px;
+}
+
+.item-main {
+    font-size:0.7em;
+    letter-spacing: -1px;
+}
+
+.item-desc {
+    text-align: center;
+}
+
+.item-price {
+    margin:0 auto 10px auto;
+    width:80%;
+    border-bottom:1px solid rgba(34, 36, 38, 0.1);
+}
+
+.item-title {
+    text-transform: uppercase;
+    letter-spacing: -1px;
+}
+
+.item-subtitle {
+    text-align:left;
 }
 
 /* fjdkls;aghj */
@@ -83,9 +122,14 @@ header {
     left:5px;
 }
 
+#toggle-view {
+    position:absolute;
+    top:5px;
+    right:5px;
+}
+
 #logo {
 	text-align:center;
-    float:left;
 	width:100%;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
