--- a/styles.css
+++ b/styles.css
@@ -71,12 +71,8 @@ body {
     text-align:center;
 }
 
-.category-list{
-    padding-left:15px;
-}
-
-.item-main {
-    font-size:0.7em;
+.ui.card > .content {
+    font-size:11px;
     letter-spacing: -1px;
 }
 
@@ -102,7 +98,7 @@ body {
 /* fjdkls;aghj */
 header {
     width: 100%;
-    height: 2em;
+    height: 2.5em;
     position: fixed;
     top: 0;
     left: 0;
@@ -116,15 +112,19 @@ header {
     color:#fff;
 }
 
+.ui.vertical.menu {
+    background-color: #08062b;
+}
+
 #show-sidebar {
     position:absolute;
-    top:5px;
+    line-height:2.5em;
     left:5px;
 }
 
 #toggle-view {
     position:absolute;
-    top:5px;
+    top:8px;
     right:5px;
 }
 
@@ -139,6 +139,7 @@ header {
 }
 
 #logo img {
+    margin-top:7px;
 	width:50px;
 }
 
