--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,24 @@ a.navlink {
 a.navlink:hover {
 	color:#fff;
 }
+
+@media all and (max-width: 660px) {
+    /* Resize Google Maps on small viewports*/
+    .google-map {
+        position: relative;
+        padding-bottom: 100%; 
+        height: 0;
+        overflow: hidden;
+    }
+
+    .google-map iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 75% !important;
+        height: 75% !important;
+    }
+}
 /*
 header.smaller {
     height: 25px;
