--- a/partials/footer.html
+++ b/partials/footer.html
@@ -49,7 +49,7 @@
         <button class="ui blue button" type="submit" data-enabled="enabled">Sign Up</button>
         </div>
 
-        <div class="ui segment center aligned"><small>By submitting this form, you are granting: Jewels by the Sea (1237 Prospect Street, La Jolla, California, 92037, United States, <i>http://www.jewelsbythesea.biz</i>) permission to email you. You may unsubscribe via the link found at the bottom of every email.  (See our <a href="http://www.constantcontact.com/legal/privacy-statement" target="_blank">Email Privacy Policy</a> for details.) Emails are serviced by Constant Contact.</small></div>
+        <div class="ui segment center aligned"><small>Emails are serviced by Constant Contact. You may unsubscribe via the link found at the bottom of every email. (See the <a href="http://www.constantcontact.com/legal/privacy-statement" target="_blank">Email Privacy Policy</a> for details.) </small></div>
        </form>
    </div>
   </div>
