--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,11 @@ a.active.item {
 }
 
 /* Product Category Grids */
+#productModals {
+    height:0;
+    width:0;
+}
+
 .item-desc {
     text-align: center;
 }
