Added secondary navigation to menu

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
 
-      <p>1237 Prospect Street, Suite B<br> La Jolla, CA 92037</p>
+      <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037</p>
       <p><a href="tel:8584595166">858.459.5166</a></p>
       <p>
         <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x"></i></a>
