Restyled mobile navigation

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,13 +3,13 @@
     <div class="ui center aligned container">
 
       <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037</p>
-      <p><a href="tel:8584595166">858.459.5166</a></p>
-      <p>
+      <p><a href="tel:8584595166"><i class="phone icon"></i>858.459.5166</a></p>
+      <p style="letter-spacing:2px">
         <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x"></i></a>
         <a href="https://www.facebook.com/Jewels-by-The-Sea-122293291160690"><i class="fa fa-facebook-square fa-2x"></i></a>
         <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-send fa-2x"></i></a>
       </p>
-      <div id ="mymodalg"><a href="#">Newsletter Sign Up <big>&rarr;</big></i></a></div>
+      <div id ="mymodalg"><a href="#">Subscribe to our Newsletter!</a></div>
       
     </div>
   </div>
@@ -24,9 +24,6 @@
 
   <div class="ui modal newsletter">
     <i class="close icon"></i>
-    <div class="header">
-      Jewels By The Sea Newsletter
-    </div>
     <div class="content">
       <p>Thanks for your interest in joining my mailing list!</p>
 
@@ -49,7 +46,7 @@
         <button class="ui blue button" type="submit" data-enabled="enabled">Sign Up</button>
         </div>
 
-        <div class="ui segment center aligned"><small>Emails are serviced by Constant Contact. You may unsubscribe via the link found at the bottom of every email. (See the <a href="http://www.constantcontact.com/legal/privacy-statement" target="_blank">Email Privacy Policy</a> for details.) </small></div>
+        <div class="ui basic segment center aligned"><small>Emails are serviced by Constant Contact. <br />You may unsubscribe via the link found at the bottom of every email. <br />(See the <a href="http://www.constantcontact.com/legal/privacy-statement" target="_blank">Email Privacy Policy</a> for details.) </small></div>
        </form>
    </div>
   </div>
