--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,9 +5,9 @@
       <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037</p>
       <p><a href="tel:8584595166"><i class="phone icon"></i>858.459.5166</a></p>
       <p style="letter-spacing:2px">
-        <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x"></i></a>
+        <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-2x" target="_blank"></i></a>
         <a href="https://www.facebook.com/Jewels-by-The-Sea-122293291160690"><i class="fa fa-facebook-square fa-2x"></i></a>
-        <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-send fa-2x"></i></a>
+        <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o fa-2x"></i></a>
       </p>
       <div id ="mymodalg"><a href="#">Subscribe to our Newsletter!</a></div>
       
@@ -25,7 +25,7 @@
   <div class="ui modal newsletter">
     <i class="close icon"></i>
     <div class="content">
-      <p>Thanks for your interest in joining my mailing list!</p>
+      <p>Thanks for your interest!</p>
 
 
       <form class="ui form" data-id="embedded_signup:form" name="embedded_signup" method="POST" action="https://visitor2.constantcontact.com/api/signup">
