--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,13 @@ a {
 .script {
 	font-family:'Cookie';
 	font-size:3em;
+    text-align:center;
+    color:#00093B;
+    /*
+    border-bottom:2px solid #1961F3;
+    width:50%;
+    margin-left:25%;
+    */
 }
 
 .ui.menu .item img.logo {
@@ -32,6 +39,12 @@ a {
 .main.container {
     margin-top: 5em;
     padding-top:3em;
+}
+
+@media only screen and (min-width:660px) {
+    .home-grid {
+        border-right: 1px solid rgba(34, 36, 38, 0.1);
+    }
 }
 
 @media only screen and (max-width: 660px) {
@@ -70,6 +83,35 @@ a.active.item {
 
 .ui.list.active.item {
     font-weight:bold;
+}
+
+.grid-hover {
+  position:absolute;
+  width:100%;
+  height:100%;
+  font-size:2.5em;
+  line-height:1em;
+  display: flex;
+  text-transform:uppercase;
+  justify-content:center;
+  align-content:center;
+  flex-direction:column;
+  color:#7aa2cf;
+}
+.grid-hover-img {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s; 
+}
+.grid-hover-img:hover {
+  opacity:0.10;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .header-img{
@@ -112,7 +154,6 @@ a.active.item {
 
 /* Individual card layouts */
 .product-item {
-    padding:0.8rem 0.5rem 0.8rem 0.5rem !important;
 }
 
 .ui.card {
@@ -124,12 +165,13 @@ a.active.item {
     background-color:#fff;
     z-index:99;
     border-top:3px solid #E2DEDC;
-    background-color:#7aa2cf;
+    /*background-color:#7aa2cf;*/
 }
 
 .ui.card > .content > a.header {
     font-size:2em;
-    color:#fff;
+    /*color:#7aa2cf;*/
+    color:#00093B;
 }
 
 /* Product Category Grids */
@@ -312,7 +354,12 @@ header {
 
 .ui.vertical.menu .menu-item.first-item {
     border-top:none;
+
 }
+.ui.vertical.menu .menu-item.first-item:hover {
+    background-color:transparent;
+}
+
 
 .ui.vertical.menu .item.menu-opener {
     font-family:'Montserrat';
@@ -389,6 +436,7 @@ a.navlink:hover {
     color:#00093B;
 }
 .store-hours {
+    margin-top:1em !important;
     color: #7aa2cf; 
     background-color:#E2DEDC
 }
