--- a/styles.css
+++ b/styles.css
@@ -86,32 +86,34 @@ a.active.item {
 }
 
 .grid-hover {
-  position:absolute;
-  width:100%;
-  height:100%;
-  font-size:2.5em;
-  line-height:1em;
-  display: flex;
-  text-transform:uppercase;
-  justify-content:center;
-  align-content:center;
-  flex-direction:column;
-  color:#7aa2cf;
+    position:absolute;
+    width:100%;
+    height:100%;
+    font-size:2.5em;
+    line-height:1em;
+    display: flex;
+    text-transform:uppercase;
+    justify-content:center;
+    align-content:center;
+    flex-direction:column;
+    color:#7aa2cf;
 }
+
 .grid-hover-img {
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; 
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s; 
 }
-.grid-hover-img:hover {
-  opacity:0.10;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+
+.grid-hover-img:hover, .grid-hover-img:focus {
+    opacity:0.10;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 .header-img{
