Updated mobile styling

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,12 @@ a.active.item {
     transition: all 0.5s;
 }
 
+@media only screen and (max-width:660px) {
+    .grid-hover {
+        font-size:1.5em;
+    }
+}
+
 .header-img{
 	width:10%;
 	float:left;
