--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ a:hover {
 
 .main.container {
     margin-top: 5em;
-    padding-top:3em;
+    padding-top:1em;
 }
 
 @media only screen and (min-width:660px) {
@@ -54,7 +54,7 @@ a:hover {
 
 @media only screen and (max-width: 660px) {
     .main.container {
-        padding-top:1em;
+        padding-top:0em;
     }
 }
 
@@ -245,14 +245,33 @@ a.active.item {
     position:fixed;
     text-align:center;
     font-size:0.75em;
-    bottom:5;
+    vertical-align:center;
+    bottom:-10em;
     right:5;
-    opacity:1;
+    height:10em;
+    width:10em;
+    border-radius:100%;
+    border:6px double;
     z-index:9999;
+    background-color:#fff;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+#toTop a{
+    color:#00093B;
 }
 
 .show {
-    opacity:1;
+    bottom:-6em !important;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 .bottom-grid-links {
@@ -480,6 +499,11 @@ a.navlink:hover {
     #navbar {
         display:none;
     }
+
+    .google-map {
+        padding-bottom:70%;
+    }
+
     /* Resize Google Maps on small viewports*/
     .google-map iframe {
         position: absolute;
@@ -513,6 +537,23 @@ a.navlink:hover {
         -o-transition: all 0.3s;
         transition: all 0.3s;
     }
+
+    #toTop {
+        font-size: 0.6em;
+        line-height: 1.5em;
+        width:5em;
+        height:5em;
+        bottom:-5em;
+        opacity:1;
+    }
+
+    .topText {
+        display:none;
+    }
+
+    .show {
+        bottom:-2.75em !important;
+    }
 }
 
 @media all and (min-width: 660px) {
@@ -540,7 +581,7 @@ a.navlink:hover {
     #navbar .item {
         font-size:2em;
         padding-bottom:0.2em;
-        margin-top:0.5em;
+        margin-top:0.6em;
     }
 
     #navbar .item.active {
@@ -550,10 +591,29 @@ a.navlink:hover {
     #navbar .item a {
     }
 
+    #navbar .popup {
+        width:100%;
+    }
+
     #navbar .ui.list .item {
         line-height:1.5em;
         font-size:1.5em;
         color:#DCE4F2;
+        padding:0 5%;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -ms-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s; 
+    }
+
+    #navbar .ui.list .item:hover {
+        background-color:#7aa2cf;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -ms-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s; 
     }
 
     #navbar .ui.popup, .ui.bottom.right.popup:before{
