Resized FAQ images

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -25,7 +25,7 @@
   <div class="ui modal newsletter">
     <i class="close icon"></i>
     <div class="content">
-      <p>Thanks for your interest!</p>
+      <p class="div-center">Thanks for your interest!</p>
 
 
       <form class="ui form" data-id="embedded_signup:form" name="embedded_signup" method="POST" action="https://visitor2.constantcontact.com/api/signup">
