--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ a:hover {
 
 .script {
 	font-family:'Cookie';
-	font-size:3em;
+	font-size:2.75em;
     text-align:center;
     color:#00093B;
     /*
@@ -55,6 +55,9 @@ a:hover {
 @media only screen and (max-width: 660px) {
     .main.container {
         padding-top:0em;
+    }
+    body {
+        font-size:1.1em;
     }
 }
 
@@ -123,7 +126,7 @@ a.active.item {
 
 @media only screen and (max-width:660px) {
     .grid-hover {
-        font-size:1.2em;
+        font-size:1.05em;
     }
 }
 
